--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.10.3",
