--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
+    "framer-motion": "^10.18.0",
     "geist": "^1.2.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
