--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "recharts": "^2.10.3",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
