--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@uiw/react-heat-map": "^2.2.1",
+    "@uiw/react-tooltip": "^4.22.3",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "d3": "^7.8.5",
     "date-fns": "^3.2.0",
     "framer-motion": "^10.18.0",
     "geist": "^1.2.0",
@@ -34,6 +38,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-tooltip": "^5.26.0",
     "recharts": "^2.10.3",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
@@ -41,6 +46,7 @@
     "vaul": "^0.8.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
