--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@uiw/react-heat-map": "^2.2.1",
     "@uiw/react-tooltip": "^4.22.3",
+    "ai": "^2.2.31",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -30,6 +31,7 @@
     "date-fns": "^3.2.0",
     "framer-motion": "^10.18.0",
     "geist": "^1.2.0",
+    "langchain": "^0.1.6",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
