--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.1",
+    "@langchain/openai": "^0.0.14",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -21,20 +22,24 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@types/socket.io": "^3.0.2",
     "@uiw/react-heat-map": "^2.2.1",
     "@uiw/react-tooltip": "^4.22.3",
     "ai": "^2.2.31",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
     "d3": "^7.8.5",
     "date-fns": "^3.2.0",
+    "dotenv": "^16.4.1",
     "framer-motion": "^10.18.0",
     "geist": "^1.2.0",
-    "langchain": "^0.1.6",
+    "langchain": "^0.1.13",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "openai": "^4.26.1",
     "prisma": "^5.6.0",
     "react": "^18",
     "react-day-picker": "^8.10.0",
@@ -42,6 +47,8 @@
     "react-icons": "^5.0.1",
     "react-tooltip": "^5.26.0",
     "recharts": "^2.10.3",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
